Step 2 - Notes Entry Component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,13 +16,7 @@
       </div>
     </div>
     <div class="col-6">
-        <div class="card">
-          <div class="card-header">
-            Notes Entry
-          </div>
-          <div class="card-body">
-          </div>
-        </div>
+      <app-notes-entry></app-notes-entry>
     </div>
   </div>
 </div>  
