Step 3 - Created Notes Display Component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,13 +7,7 @@
   </div>
   <div class="row">
     <div class="col-6">
-      <div class="card">
-        <div class="card-header">
-          Notes Display
-        </div>
-        <div class="card-body">
-        </div>
-      </div>
+      <app-notes-display></app-notes-display>
     </div>
     <div class="col-6">
       <app-notes-entry></app-notes-entry>
